--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Автоматизированная штукатурка стен</title>
   <link rel="stylesheet" href="css/normailize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
