Сверстан first screen

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,45 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Hello, World!</h1>
+<!--   <div class="head">
+  <div class="header container">
+    <img class="header-logo" src="img/head-logo.png" alt="Гисполит. Штукатурка стен" width="206" height="70">
+    <p class="header-phone">+7 495 771 05 08</p>
+    <button type="" class="btn btn_header" href="#">Получить консультацию</button>
+  </div>
+</div> -->
+<section class="first-screen">
+  <header class="header container">
+    <img class="header-logo" src="img/head-logo.png" alt="Гисполит. Штукатурка стен" width="206" height="70">
+    <p class="header-phone">+7 495 771 05 08</p>
+    <button type="button" class="btn btn_header">Получить консультацию</button>
+  </header>
+  <div class="columns container">
+    <div class="column-left">
+      <h1 class="column-left__title">
+        Автоматизированная штукатурка стен
+      </h1>
+      <p class="column-left__subtitle">Идеально ровные стены в кратчайшие сроки</p>
+      <p class="column-left__block-price">Стоимость работ<br> от <span>300</span> руб/м2</p>
+      <b class="column-left__text">Оплата по факту!</b>
+    </div>
+
+    <div class="column-right">
+      <form class="column-right__form" action="#">
+        <h2 class="column-right__title-form">Для расчёта точной стоимости закажите <strong>выезд замерщика</strong></h2>
+        <label for="name">Ваше имя</label>
+        <input class="column-right__input" id="name" type="text" name="name">
+        <label for="phone">Номер телефона</label>
+        <input class="column-right__input" id="phone" type="tel" name="phone">
+        <button class="btn column-right__form-btn" type="submit">Оставьте заявку</button>
+        <small class="small-text-1">Приедем в день обращение*</small>
+        <small class="small-text-2">* - выезды на замер осуществляются в рабоче дни Пн-Пт с 9:00 до 18:00</small>
+      </form>
+    </div>
+  </div>
+</section>
+<section class="features container">
+  123
+</section>
 </body>
 </html>
