Добавлен блок features

--- a/src/index.html
+++ b/src/index.html
@@ -7,45 +7,71 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<!--   <div class="head">
-  <div class="header container">
-    <img class="header-logo" src="img/head-logo.png" alt="Гисполит. Штукатурка стен" width="206" height="70">
-    <p class="header-phone">+7 495 771 05 08</p>
-    <button type="" class="btn btn_header" href="#">Получить консультацию</button>
-  </div>
-</div> -->
-<section class="first-screen">
-  <header class="header container">
-    <img class="header-logo" src="img/head-logo.png" alt="Гисполит. Штукатурка стен" width="206" height="70">
-    <p class="header-phone">+7 495 771 05 08</p>
-    <button type="button" class="btn btn_header">Получить консультацию</button>
-  </header>
-  <div class="columns container">
-    <div class="column-left">
-      <h1 class="column-left__title">
-        Автоматизированная штукатурка стен
-      </h1>
-      <p class="column-left__subtitle">Идеально ровные стены в кратчайшие сроки</p>
-      <p class="column-left__block-price">Стоимость работ<br> от <span>300</span> руб/м2</p>
-      <b class="column-left__text">Оплата по факту!</b>
-    </div>
+  <section class="first-screen">
+    <header class="header container">
+      <img class="header-logo" src="img/head-logo.png" alt="Гисполит. Штукатурка стен" width="206" height="70">
+      <p class="header-phone">+7 495 771 05 08</p>
+      <button type="button" class="btn btn_header">Получить консультацию</button>
+    </header>
+    <div class="columns container">
+      <div class="column-left">
+        <h1 class="column-left__title">
+          Автоматизированная штукатурка стен
+        </h1>
+        <p class="column-left__subtitle">Идеально ровные стены в кратчайшие сроки</p>
+        <p class="column-left__block-price">Стоимость работ<br> от <span>300</span> руб/м2</p>
+        <b class="column-left__text">Оплата по факту!</b>
+      </div>
 
-    <div class="column-right">
-      <form class="column-right__form" action="#">
-        <h2 class="column-right__title-form">Для расчёта точной стоимости закажите <strong>выезд замерщика</strong></h2>
-        <label for="name">Ваше имя</label>
-        <input class="column-right__input" id="name" type="text" name="name">
-        <label for="phone">Номер телефона</label>
-        <input class="column-right__input" id="phone" type="tel" name="phone">
-        <button class="btn column-right__form-btn" type="submit">Оставьте заявку</button>
-        <small class="small-text-1">Приедем в день обращение*</small>
-        <small class="small-text-2">* - выезды на замер осуществляются в рабоче дни Пн-Пт с 9:00 до 18:00</small>
-      </form>
+      <div class="column-right">
+        <form class="column-right__form" action="#">
+          <h2 class="column-right__title-form">Для расчёта точной стоимости закажите <strong>выезд замерщика</strong></h2>
+          <label for="name">Ваше имя</label>
+          <input class="column-right__input" id="name" type="text" name="name">
+          <label for="phone">Номер телефона</label>
+          <input class="column-right__input" id="phone" type="tel" name="phone">
+          <button class="btn column-right__form-btn" type="submit">Оставьте заявку</button>
+          <small class="small-text-1">Приедем в день обращение*</small>
+          <small class="small-text-2">* - выезды на замер осуществляются в рабоче дни Пн-Пт с 9:00 до 18:00</small>
+        </form>
+      </div>
     </div>
-  </div>
-</section>
-<section class="features container">
-  123
-</section>
+  </section>
+  <section class="features container">
+    <h2 class="features__title">Преимущества работы с нами</h2>
+    <div class="features-wrap">
+      <section class="features-item">
+        <img class="features-item__icon" src="img/features-icon1.png" alt="Иконка преимущества">
+        <h3 class="features-item__title">Платите по факту</h3>
+        <p class="features-item__text">
+          Вы оплачиваете выполненные<br> работы только после их выполнения.<br> Никаких скрытых доплат<br> и промежуточных платежей.
+        </p>
+      </section>
+      <section class="features-item">
+        <img class="features-item__icon" src="img/features-icon2.png" alt="Иконка преимущества">
+        <h3 class="features-item__title">Заключаем договор</h3>
+        <p class="features-item__text">
+          Перед началом работ заключаем<br> договор на юридическое лицо.<br> Вы можете быть уверены, что все<br> обязательства будут выполнены.
+        </p>
+      </section>
+      <section class="features-item">
+        <img class="features-item__icon" src="img/features-icon3.png" alt="Иконка преимущества">
+        <h3 class="features-item__title">Точно в срок</h3>
+        <p class="features-item__text">
+          Работаем строго по установленным<br> срокам, которые прописаны <br>в договоре. Если не успеваем,<br> Вы платите меньше
+        </p>
+      </section>
+      <section class="features-item">
+        <img class="features-item__icon" src="img/features-icon4.png" alt="Иконка преимущества">
+        <h3 class="features-item__title">Экономите на материалах</h3>
+        <p class="features-item__text">
+          Мы являемся структурным подразделением компании поставщика строительных смесей <a class="features-item__text-link" href="#">gicema.ru</a>  и даём<br> Вам самые выгодные цены.
+        </p>
+      </section>
+    </div>
+  </section>
+  <section class="green container">
+
+  </section>
 </body>
 </html>
