Из блока features удален блок features-wrap, в css features display: flex;

--- a/src/index.html
+++ b/src/index.html
@@ -37,41 +37,39 @@
       </div>
     </div>
   </section>
+
+  <!-- Блок features -->
+
   <section class="features container">
     <h2 class="features__title">Преимущества работы с нами</h2>
-    <div class="features-wrap">
-      <section class="features-item">
-        <img class="features-item__icon" src="img/features-icon1.png" alt="Иконка преимущества">
-        <h3 class="features-item__title">Платите по факту</h3>
-        <p class="features-item__text">
-          Вы оплачиваете выполненные<br> работы только после их выполнения.<br> Никаких скрытых доплат<br> и промежуточных платежей.
-        </p>
-      </section>
-      <section class="features-item">
-        <img class="features-item__icon" src="img/features-icon2.png" alt="Иконка преимущества">
-        <h3 class="features-item__title">Заключаем договор</h3>
-        <p class="features-item__text">
-          Перед началом работ заключаем<br> договор на юридическое лицо.<br> Вы можете быть уверены, что все<br> обязательства будут выполнены.
-        </p>
-      </section>
-      <section class="features-item">
-        <img class="features-item__icon" src="img/features-icon3.png" alt="Иконка преимущества">
-        <h3 class="features-item__title">Точно в срок</h3>
-        <p class="features-item__text">
-          Работаем строго по установленным<br> срокам, которые прописаны <br>в договоре. Если не успеваем,<br> Вы платите меньше
-        </p>
-      </section>
-      <section class="features-item">
-        <img class="features-item__icon" src="img/features-icon4.png" alt="Иконка преимущества">
-        <h3 class="features-item__title">Экономите на материалах</h3>
-        <p class="features-item__text">
-          Мы являемся структурным подразделением компании поставщика строительных смесей <a class="features-item__text-link" href="#">gicema.ru</a>  и даём<br> Вам самые выгодные цены.
-        </p>
-      </section>
-    </div>
-  </section>
-  <section class="green container">
-
+    <section class="features-item">
+      <img class="features-item__icon" src="img/features-icon1.png" alt="Иконка преимущества">
+      <h3 class="features-item__title">Платите по факту</h3>
+      <p class="features-item__text">
+        Вы оплачиваете выполненные<br> работы только после их выполнения.<br> Никаких скрытых доплат<br> и промежуточных платежей.
+      </p>
+    </section>
+    <section class="features-item">
+      <img class="features-item__icon" src="img/features-icon2.png" alt="Иконка преимущества">
+      <h3 class="features-item__title">Заключаем договор</h3>
+      <p class="features-item__text">
+        Перед началом работ заключаем<br> договор на юридическое лицо.<br> Вы можете быть уверены, что все<br> обязательства будут выполнены.
+      </p>
+    </section>
+    <section class="features-item">
+      <img class="features-item__icon" src="img/features-icon3.png" alt="Иконка преимущества">
+      <h3 class="features-item__title">Точно в срок</h3>
+      <p class="features-item__text">
+        Работаем строго по установленным<br> срокам, которые прописаны <br>в договоре. Если не успеваем,<br> Вы платите меньше
+      </p>
+    </section>
+    <section class="features-item">
+      <img class="features-item__icon" src="img/features-icon4.png" alt="Иконка преимущества">
+      <h3 class="features-item__title">Экономите на материалах</h3>
+      <p class="features-item__text">
+        Мы являемся структурным подразделением компании поставщика строительных смесей <a class="features-item__text-link" href="#">gicema.ru</a>  и даём<br> Вам самые выгодные цены.
+      </p>
+    </section>
   </section>
 </body>
 </html>
