Добавлен блок Price, кнопка не прижата к низу

--- a/src/index.html
+++ b/src/index.html
@@ -39,9 +39,8 @@
   </section>
 
   <!-- Блок features -->
-
   <section class="features container">
-    <h2 class="features__title">Преимущества работы с нами</h2>
+    <h2 class="features__title title-section">Преимущества работы с нами</h2>
     <section class="features-item">
       <img class="features-item__icon" src="img/features-icon1.png" alt="Иконка преимущества">
       <h3 class="features-item__title">Платите по факту</h3>
@@ -71,5 +70,56 @@
       </p>
     </section>
   </section>
+  
+  <!-- Блок price -->
+  <section class="price">
+    <div class="container">
+      <div class="price-heading">
+        <h2 class="price-title title-section">Цены</h2>
+        <p class="price-subtitle">Выберите вариант, который подходит Вам:</p>
+        <a class="btn price-heading-btn" href="#">Рассчитать точную стоимость</a>
+      </div>
+      <div class="price-items-wrap">
+        <div class="price-item">
+          <h3 class="price-item__title">Штукатурка вашим материалом</h3>
+          <img class="price-item__img" src="img/price-photo1.jpg" alt="фото услуги" width="300" height="200">
+          <p class="price-item__cost">от <span>300</span> руб/м2</p>
+          <ul class="price-item__list">
+            <li class="price-item__list-item">Проведение работ</li>
+            <li class="price-item__list-item">Уборка</li>
+          </ul>
+          <button class="price-item__btn btn" tyoe="button">Заказать</button>
+        </div>
+
+        <div class="price-item">
+          <h3 class="price-item__title">Штукатурка под шпаклёвку</h3>
+          <img class="price-item__img" src="img/price-photo2.jpg" alt="фото услуги" width="300" height="200">
+          <p class="price-item__cost">от <span>530</span> руб/м2</p>
+          <ul class="price-item__list">
+            <li class="price-item__list-item">Завоз материала и его подъём</li>
+            <li class="price-item__list-item">Проведение работ</li>
+            <li class="price-item__list-item">Уборка</li>
+            <li class="price-item__list-item">Гарантия 2 года</li>
+          </ul>
+          <button class="price-item__btn btn" type="button">Заказать</button>
+        </div>
+
+        <div class="price-item">
+          <h3 class="price-item__title">Штукатурка под обои</h3>
+          <img class="price-item__img" src="img/price-photo3.jpg" alt="фото услуги" width="300" height="200">
+          <p class="price-item__cost">от <span>560</span> руб/м2</p>
+          <ul class="price-item__list">
+            <li class="price-item__list-item">Завоз материала и его подъём</li>
+            <li class="price-item__list-item">Проведение работ</li>
+            <li class="price-item__list-item">Уборка</li>
+            <li class="price-item__list-item">Гарантия 2 года</li>
+            <li class="price-item__list-item">Можно сразу клеить обои</li>
+          </ul>
+          <button class="price-item__btn btn" tyoe="button">Заказать</button>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
+
